--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -83,7 +83,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=315,Y=143)
 MultipleInstancePositions=(X=0,Y=0)
-MultipleInstancePositions=(X=960,Y=0)
+MultipleInstancePositions=(X=556,Y=144)
 MultipleInstancePositions=(X=315,Y=143)
 MultipleInstancePositions=(X=793,Y=159)
 MultipleInstancePositions=(X=0,Y=520)
@@ -954,14 +954,19 @@ BankSpawnPoint_C.TransformCommon=True
 BankSpawnPoint_C.Rendering=True
 BankSpawnPoint_C.Input=True
 BankSpawnPoint_C.Actor=True
+REINST_MyPlayer_C_104.None=True
+REINST_MyPlayer_C_104.Tick=True
+REINST_MyPlayer_C_104.Character=True
+REINST_MyPlayer_C_104.Camera=True
+REINST_MyPlayer_C_104.Pawn=True
+REINST_MyPlayer_C_104.Rendering=True
+REINST_MyPlayer_C_104.Replication=True
+REINST_MyPlayer_C_104.Input=True
+REINST_MyPlayer_C_104.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
-OpenAssetsAtExit=/Game/MyGame/MyGameComponents/Economy/BankComponent.BankComponent
-OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState.MyGameState
-OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -993,11 +998,11 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyWorlds/DefaultWorld
+MRUItem0=/Game/MyGame/MyPlayer/MyPlayer
 MRUItem1=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem2=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
-MRUItem3=/Game/MyGame/MyGameComponents/Economy/BankComponent
-MRUItem4=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem2=/Game/MyWorlds/DefaultWorld
+MRUItem3=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
+MRUItem4=/Game/MyGame/MyGameComponents/Economy/BankComponent
 MRUItem5=/Game/MyMenu/MM_Player/MM_Player
 MRUItem6=/Game/MyMenu/MM_Widget/MM_Settings
 MRUItem7=/Game/MyMenu/MM_Widget/Extra/MM_Button
