--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -983,8 +983,13 @@ REINST_Zombie_C_58.Input=True
 REINST_Zombie_C_58.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/MyGame/MyGameComponents/Economy/BankComponent.BankComponent
+OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState.MyGameState
+OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode
+OpenAssetsAtExit=/Game/MyGame/MyPlayer/SimpleHUD.SimpleHUD
+OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1018,26 +1023,26 @@ GlobalAssetPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem1=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem2=/Game/MyGame/MyGameComponents/Economy/WalletComponent
-MRUItem3=/Game/MyGame/MyGameComponents/Economy/BankComponent
-MRUItem4=/Game/MyGame/MyPlayer/BankCurrency
-MRUItem5=/Game/MyGame/MyGameActors/BankActor
-MRUItem6=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
-MRUItem7=/Game/MyMonsters/Zombie/Zombie
-MRUItem8=/Game/MyMonsters/MasterMonster
-MRUItem9=/Game/MyWorlds/DefaultWorld
-MRUItem10=/Game/MyMenu/MM_Level/MM_Level
-MRUItem11=/Game/MyMenu/MM_Player/MM_Player
-MRUItem12=/Game/MyMenu/MM_Widget/MM_Settings
-MRUItem13=/Game/MyMenu/MM_Widget/Extra/MM_Button
-MRUItem14=/Game/MyMenu/MM_Widget/MM_MainMenu
-MRUItem15=/Game/MyMenu/MM_Widget/MM_WidgetSwitcher
-MRUItem16=/Game/MyMenu/MM_Widget/MM_Multiplayer
-MRUItem17=/Game/MyMenu/MM_Widget/Extra/MM_ButtonOld
-MRUItem18=/Game/MyGame/MyPlayer/HealthComponent
-MRUItem19=/Game/MyGame/MyPlayer/PlayerHealth
+MRUItem0=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem1=/Game/MyGame/MyPlayer/SimpleHUD
+MRUItem2=/Game/MyWorlds/DefaultWorld
+MRUItem3=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem4=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
+MRUItem5=/Game/MyGame/MyGameComponents/Economy/BankComponent
+MRUItem6=/Game/MyGame/MyGameComponents/Economy/WalletComponent
+MRUItem7=/Game/MyGame/MyPlayer/BankCurrency
+MRUItem8=/Game/MyGame/MyGameActors/BankActor
+MRUItem9=/Game/MyMonsters/Zombie/Zombie
+MRUItem10=/Game/MyMonsters/MasterMonster
+MRUItem11=/Game/MyMenu/MM_Level/MM_Level
+MRUItem12=/Game/MyMenu/MM_Player/MM_Player
+MRUItem13=/Game/MyMenu/MM_Widget/MM_Settings
+MRUItem14=/Game/MyMenu/MM_Widget/Extra/MM_Button
+MRUItem15=/Game/MyMenu/MM_Widget/MM_MainMenu
+MRUItem16=/Game/MyMenu/MM_Widget/MM_WidgetSwitcher
+MRUItem17=/Game/MyMenu/MM_Widget/MM_Multiplayer
+MRUItem18=/Game/MyMenu/MM_Widget/Extra/MM_ButtonOld
+MRUItem19=/Game/MyGame/MyPlayer/HealthComponent
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
