--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -114,7 +114,7 @@ MRUItem0=/Game/MyWorlds/DefaultWorld
 MRUItem1=/Game/MyMenu/MM_Level/MM_Level
 
 [EditorStartup]
-LastLevel=/Game/MyWorlds/DefaultWorld
+LastLevel=/Game/MyMenu/MM_Level/MM_Level
 
 [DetailCategories]
 WorldSettings.World=True
@@ -983,7 +983,7 @@ REINST_Zombie_C_58.Input=True
 REINST_Zombie_C_58.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowser]
@@ -1000,7 +1000,7 @@ ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
 ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyGameActors
-ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyGameBlueprints/MyGameMode
+ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyGameBlueprints/MyGameState
 None=======
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1018,11 +1018,11 @@ GlobalAssetPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyWorlds/DefaultWorld
+MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
 MRUItem1=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem2=/Game/MyGame/MyPlayer/SimpleHUD
-MRUItem3=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem4=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
+MRUItem2=/Game/MyWorlds/DefaultWorld
+MRUItem3=/Game/MyGame/MyPlayer/SimpleHUD
+MRUItem4=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
 MRUItem5=/Game/MyGame/MyGameComponents/Economy/BankComponent
 MRUItem6=/Game/MyGame/MyGameComponents/Economy/WalletComponent
 MRUItem7=/Game/MyGame/MyPlayer/BankCurrency
@@ -1066,7 +1066,7 @@ None=======
 /Game/MyMonsters/Zombie/Zombie.Zombie=1
 
 [RootWindow]
-ScreenPosition=X=214.000 Y=201.000
+ScreenPosition=X=404.000 Y=232.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=False
 
