--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=315,Y=143)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
+LastExecutedPlayModeType=PlayMode_InNewProcess
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -114,7 +114,7 @@ MRUItem0=/Game/MyWorlds/DefaultWorld
 MRUItem1=/Game/MyMenu/MM_Level/MM_Level
 
 [EditorStartup]
-LastLevel=/Game/MyWorlds/DefaultWorld
+LastLevel=/Game/MyMenu/MM_Level/MM_Level
 
 [DetailCategories]
 WorldSettings.World=True
@@ -981,28 +981,11 @@ REINST_Zombie_C_58.Rendering=True
 REINST_Zombie_C_58.Replication=True
 REINST_Zombie_C_58.Input=True
 REINST_Zombie_C_58.Actor=True
-REINST_Zombie_C_712.Default=True
-REINST_Zombie_C_712.Tick=True
-REINST_Zombie_C_712.Character=True
-REINST_Zombie_C_712.Camera=True
-REINST_Zombie_C_712.Pawn=True
-REINST_Zombie_C_712.Rendering=True
-REINST_Zombie_C_712.Replication=True
-REINST_Zombie_C_712.Input=True
-REINST_Zombie_C_712.Actor=True
-REINST_Zombie_C_716.Default=True
-REINST_Zombie_C_716.Tick=True
-REINST_Zombie_C_716.Character=True
-REINST_Zombie_C_716.Camera=True
-REINST_Zombie_C_716.Pawn=True
-REINST_Zombie_C_716.Rendering=True
-REINST_Zombie_C_716.Replication=True
-REINST_Zombie_C_716.Input=True
-REINST_Zombie_C_716.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1036,16 +1019,16 @@ GlobalAssetPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyGame/MyGameComponents/Economy/BankComponent
-MRUItem1=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem2=/Game/MyMonsters/Zombie/Zombie
-MRUItem3=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem4=/Game/MyWorlds/DefaultWorld
-MRUItem5=/Game/MyGame/MyGameActors/BankActor
-MRUItem6=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
-MRUItem7=/Game/MyGame/MyPlayer/SimpleHUD
-MRUItem8=/Game/MyGame/MyGameComponents/Economy/WalletComponent
-MRUItem9=/Game/MyGame/MyPlayer/BankCurrency
+MRUItem0=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem1=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
+MRUItem2=/Game/MyWorlds/DefaultWorld
+MRUItem3=/Game/MyGame/MyPlayer/SimpleHUD
+MRUItem4=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem5=/Game/MyGame/MyGameComponents/Economy/BankComponent
+MRUItem6=/Game/MyGame/MyGameComponents/Economy/WalletComponent
+MRUItem7=/Game/MyGame/MyPlayer/BankCurrency
+MRUItem8=/Game/MyGame/MyGameActors/BankActor
+MRUItem9=/Game/MyMonsters/Zombie/Zombie
 MRUItem10=/Game/MyMonsters/MasterMonster
 MRUItem11=/Game/MyMenu/MM_Level/MM_Level
 MRUItem12=/Game/MyMenu/MM_Player/MM_Player
@@ -1880,13 +1863,13 @@ Widget=
 Visual=
 Object=
 StaticMeshComponent=
-StaticMeshComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent=
-MeshComponent=
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 PrimitiveComponent=
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 SceneComponent=
-SceneComponent=
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 ActorComponent=
 ActorComponent=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
