--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=315,Y=143)
-LastExecutedPlayModeType=PlayMode_InNewProcess
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -114,7 +114,7 @@ MRUItem0=/Game/MyWorlds/DefaultWorld
 MRUItem1=/Game/MyMenu/MM_Level/MM_Level
 
 [EditorStartup]
-LastLevel=/Game/MyMenu/MM_Level/MM_Level
+LastLevel=/Game/MyWorlds/DefaultWorld
 
 [DetailCategories]
 WorldSettings.World=True
@@ -986,6 +986,8 @@ REINST_Zombie_C_58.Actor=True
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
+OpenAssetsAtExit=/Game/MyMonsters/MasterMonster.MasterMonster
+OpenAssetsAtExit=/Game/MyMonsters/Zombie/Zombie.Zombie
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1019,17 +1021,17 @@ GlobalAssetPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem1=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
-MRUItem2=/Game/MyWorlds/DefaultWorld
-MRUItem3=/Game/MyGame/MyPlayer/SimpleHUD
-MRUItem4=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem5=/Game/MyGame/MyGameComponents/Economy/BankComponent
-MRUItem6=/Game/MyGame/MyGameComponents/Economy/WalletComponent
-MRUItem7=/Game/MyGame/MyPlayer/BankCurrency
-MRUItem8=/Game/MyGame/MyGameActors/BankActor
-MRUItem9=/Game/MyMonsters/Zombie/Zombie
-MRUItem10=/Game/MyMonsters/MasterMonster
+MRUItem0=/Game/MyWorlds/DefaultWorld
+MRUItem1=/Game/MyMonsters/Zombie/Zombie
+MRUItem2=/Game/MyMonsters/MasterMonster
+MRUItem3=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem4=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
+MRUItem5=/Game/MyGame/MyPlayer/SimpleHUD
+MRUItem6=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem7=/Game/MyGame/MyGameComponents/Economy/BankComponent
+MRUItem8=/Game/MyGame/MyGameComponents/Economy/WalletComponent
+MRUItem9=/Game/MyGame/MyPlayer/BankCurrency
+MRUItem10=/Game/MyGame/MyGameActors/BankActor
 MRUItem11=/Game/MyMenu/MM_Level/MM_Level
 MRUItem12=/Game/MyMenu/MM_Player/MM_Player
 MRUItem13=/Game/MyMenu/MM_Widget/MM_Settings
