--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -18,7 +18,7 @@ AssetViewerProfileName=
 MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowPosition=(X=-8,Y=-8)
+NewWindowPosition=(X=315,Y=143)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -1048,10 +1048,38 @@ Texture2D.Texture=True
 Texture2D.File Path=True
 Texture2D.Adjustments=True
 Texture2D.Compositing=True
+Slider.Layout=True
+Slider.Appearance=True
+Slider.Style=True
+Slider.Interaction=True
+Slider.Behavior=True
+Slider.Render Transform=True
+Slider.Performance=True
+Slider.Clipping=True
+Slider.Navigation=True
+Slider.Events=True
+Overlay.Layout=True
+Overlay.Behavior=True
+Overlay.Render Transform=True
+Overlay.Performance=True
+Overlay.Clipping=True
+Overlay.Navigation=True
+MM_BarSetting_C.Default=True
+MM_BarSetting_C.Appearance=True
+MM_BarSetting_C.Designer=True
+MM_BarSetting_C.Input=True
+MM_BarSetting_C.Interaction=True
+MM_BarSetting_C.Performance=True
+MM_BarSetting_C.Layout=True
+MM_BarSetting_C.Behavior=True
+MM_BarSetting_C.Render Transform=True
+MM_BarSetting_C.Clipping=True
+MM_BarSetting_C.Navigation=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/MyMenu/MM_Widget/Extra/MM_Button.MM_Button
 OpenAssetsAtExit=/Game/MyAssets/Textures/Icons/bar_closed.bar_closed
 OpenAssetsAtExit=/Game/MyAssets/Textures/Icons/bar_open.bar_open
 OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseSettings.MM_BaseSettings
@@ -1090,20 +1118,20 @@ GlobalAssetPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyAssets/Textures/Icons/bar_closed
-MRUItem1=/Game/MyAssets/Textures/Icons/bar_open
-MRUItem2=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseSettings
-MRUItem3=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseSetting
-MRUItem4=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseBox
-MRUItem5=/Game/MyMenu/MM_Widget/MM_Settings
-MRUItem6=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance
-MRUItem7=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem8=/Game/MyMenu/MM_Widget/MM_Multiplayer
-MRUItem9=/Game/MyMenu/MM_Widget/MM_MainMenu
-MRUItem10=/Game/MyMenu/MM_Widget/MM_HostGame
-MRUItem11=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
-MRUItem12=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem13=/Game/MyMenu/MM_Widget/Extra/MM_Button
+MRUItem0=/Game/MyMenu/MM_Widget/Extra/MM_Button
+MRUItem1=/Game/MyAssets/Textures/Icons/bar_closed
+MRUItem2=/Game/MyAssets/Textures/Icons/bar_open
+MRUItem3=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseSettings
+MRUItem4=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseSetting
+MRUItem5=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseBox
+MRUItem6=/Game/MyMenu/MM_Widget/MM_Settings
+MRUItem7=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance
+MRUItem8=/Game/MyMenu/MM_GameMode/MM_GameMode
+MRUItem9=/Game/MyMenu/MM_Widget/MM_Multiplayer
+MRUItem10=/Game/MyMenu/MM_Widget/MM_MainMenu
+MRUItem11=/Game/MyMenu/MM_Widget/MM_HostGame
+MRUItem12=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
+MRUItem13=/Game/MyGame/MyPlayer/MyPlayer
 MRUItem14=/Game/MyMenu/MM_Widget/Extra/MenuSelector
 MRUItem15=/Game/MyMenu/MM_Widget/MM_WidgetSwitcher
 MRUItem16=/Game/MyWorlds/DefaultWorld
@@ -1831,7 +1859,7 @@ Panel=False
 Primitive=False
 Special Effects=False
 Uncategorized=False
-User Created=True
+User Created=False
 Common=False
 
 [DetailCustomWidgetExpansion]
@@ -1931,6 +1959,7 @@ TextRenderComponent.Text=True
 WidgetComponent.UserInterface=True
 Texture2D.LevelOfDetail=True
 Texture2D.Texture=True
+Slider.Appearance=True
 
 [DetailPropertyExpansion]
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1938,9 +1967,9 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
-Visual="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
-Object="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
+Widget=
+Visual=
+Object=
 StaticMeshComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent=
@@ -1991,5 +2020,7 @@ ContentWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.Bru
 PanelWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
 Button="\"Object.Appearance.BackgroundColor\" "
 Image="\"Object.Appearance.Brush\" "
+ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.FillImage.TintColor\" \"Object.Appearance.FillColorAndOpacity\" "
+Slider="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.DisabledBarImage\" \"Object.Style.WidgetStyle.NormalThumbImage\" \"Object.Style.WidgetStyle.NormalThumbImage.TintColor\" "
 
 
