--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1075,6 +1075,7 @@ MM_BarSetting_C.Behavior=True
 MM_BarSetting_C.Render Transform=True
 MM_BarSetting_C.Clipping=True
 MM_BarSetting_C.Navigation=True
+MM_BaseSetting_C.Default=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -1082,7 +1083,7 @@ SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/MyMenu/MM_Widget/Extra/MM_Button.MM_Button
 OpenAssetsAtExit=/Game/MyAssets/Textures/Icons/bar_closed.bar_closed
 OpenAssetsAtExit=/Game/MyAssets/Textures/Icons/bar_open.bar_open
-OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseSettings.MM_BaseSettings
+OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_GUI/MM_BarSetting.MM_BarSetting
 OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseSetting.MM_BaseSetting
 OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseBox.MM_BaseBox
 
@@ -1118,26 +1119,26 @@ GlobalAssetPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMenu/MM_Widget/Extra/MM_Button
-MRUItem1=/Game/MyAssets/Textures/Icons/bar_closed
-MRUItem2=/Game/MyAssets/Textures/Icons/bar_open
-MRUItem3=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseSettings
-MRUItem4=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseSetting
-MRUItem5=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseBox
-MRUItem6=/Game/MyMenu/MM_Widget/MM_Settings
-MRUItem7=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance
-MRUItem8=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem9=/Game/MyMenu/MM_Widget/MM_Multiplayer
-MRUItem10=/Game/MyMenu/MM_Widget/MM_MainMenu
-MRUItem11=/Game/MyMenu/MM_Widget/MM_HostGame
-MRUItem12=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
-MRUItem13=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem14=/Game/MyMenu/MM_Widget/Extra/MenuSelector
-MRUItem15=/Game/MyMenu/MM_Widget/MM_WidgetSwitcher
-MRUItem16=/Game/MyWorlds/DefaultWorld
-MRUItem17=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem18=/Game/MyMenu/MM_Level/MM_Level
-MRUItem19=/Game/MyMonsters/Zombie/Zombie
+MRUItem0=/Game/MyAssets/Textures/GUI/ProgressBar/MaxPlayers
+MRUItem1=/Game/MyMenu/MM_Widget/Extra/MM_Button
+MRUItem2=/Game/MyAssets/Textures/Icons/bar_closed
+MRUItem3=/Game/MyAssets/Textures/Icons/bar_open
+MRUItem4=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseSettings
+MRUItem5=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseSetting
+MRUItem6=/Game/MyMenu/MM_Widget/MM_GUI/MM_BaseBox
+MRUItem7=/Game/MyMenu/MM_Widget/MM_Settings
+MRUItem8=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance
+MRUItem9=/Game/MyMenu/MM_GameMode/MM_GameMode
+MRUItem10=/Game/MyMenu/MM_Widget/MM_Multiplayer
+MRUItem11=/Game/MyMenu/MM_Widget/MM_MainMenu
+MRUItem12=/Game/MyMenu/MM_Widget/MM_HostGame
+MRUItem13=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
+MRUItem14=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem15=/Game/MyMenu/MM_Widget/Extra/MenuSelector
+MRUItem16=/Game/MyMenu/MM_Widget/MM_WidgetSwitcher
+MRUItem17=/Game/MyWorlds/DefaultWorld
+MRUItem18=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem19=/Game/MyMenu/MM_Level/MM_Level
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -1859,7 +1860,7 @@ Panel=False
 Primitive=False
 Special Effects=False
 Uncategorized=False
-User Created=False
+User Created=True
 Common=False
 
 [DetailCustomWidgetExpansion]
@@ -1967,9 +1968,9 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget=
-Visual=
-Object=
+Widget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
+Visual="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
+Object="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
 StaticMeshComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent=
@@ -2021,6 +2022,6 @@ PanelWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.Brush
 Button="\"Object.Appearance.BackgroundColor\" "
 Image="\"Object.Appearance.Brush\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.FillImage.TintColor\" \"Object.Appearance.FillColorAndOpacity\" "
-Slider="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.DisabledBarImage\" \"Object.Style.WidgetStyle.NormalThumbImage\" \"Object.Style.WidgetStyle.NormalThumbImage.TintColor\" "
+Slider="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalThumbImage.TintColor\" "
 
 
