--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1393,11 +1393,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=G:/Aedion Studio/ProjectZombieGame/Content/MyWorlds
+UNR=F:/AedionStudio/ProjectZombieGame/Content/MyMenu/MM_Level
 BRUSH=G:/ProjectZombieGame/Content/
 FBX=G:/ProjectZombieGame/Content/
 FBXAnim=G:/ProjectZombieGame/Content/
-GenericImport=C:/Users/pijel/Desktop/olney_light.otf
+GenericImport=F:/AedionStudio/ProjectZombieGame/MaxPlayers.png
 GenericExport=G:/ProjectZombieGame/Content/
 GenericOpen=G:/ProjectZombieGame/Content/
 GenericSave=G:/ProjectZombieGame/Content/
@@ -2043,6 +2043,8 @@ PerfCounters.TimeStamp=2018.09.19-18.57.32
 PerfCounters.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2018.09.19-18.57.33
 SequencerWidgets.LastCompileMethod=External
+TextureEditor.TimeStamp=2018.09.19-18.45.20
+TextureEditor.LastCompileMethod=Unknown
 
 [PluginBrowser]
 InstalledPlugins=SmoothSyncPlugin
@@ -2187,9 +2189,9 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.BackgroundColor\" "
-Visual="\"Object.Appearance.BackgroundColor\" "
-Object="\"Object.Appearance.BackgroundColor\" "
+Widget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalThumbImage.TintColor\" "
+Visual="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalThumbImage.TintColor\" "
+Object="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalThumbImage.TintColor\" "
 StaticMeshComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent=
